vlib/v/checker/tests/fn_call_or_block_err.vv
type Aa = string | int

fn f() !string {
	return ''
}

y := Aa(f() or { 2 })
println(y)
